# cross-haskell-app

./: README.md  cross-haskell-app.cabal  default.nix  release.nix
nix/: pkgs.nix
