cabal-version: 1.12
name:           cross-haskell-app
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/cross-haskell-app#readme>
homepage:       https://github.com/githubuser/cross-haskell-app#readme
bug-reports:    https://github.com/githubuser/cross-haskell-app/issues
author:         Author name here
maintainer:     example@example.com
copyright:      2020 Author name here
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/githubuser/cross-haskell-app

library
  exposed-modules:
      Lib
  other-modules:
      Paths_cross_haskell_app
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
  default-language: Haskell2010

executable cross-haskell-app-exe
  main-is: Main.hs
  other-modules:
      Paths_cross_haskell_app
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , cross-haskell-app
  default-language: Haskell2010

test-suite cross-haskell-app-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_cross_haskell_app
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , cross-haskell-app
  default-language: Haskell2010
